force-app/main/default/objects/LLC_BI__Product_State_Config__c/LLC_BI__Product_State_Config__c.object-meta.xml
<CustomObject>
    <label>Product State Config</label>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>Product State Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product State Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>