force-app/main/default/objects/LLC_BI__Product_State_Config__c/fields/LLC_BI__Activate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Activate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if Product State Config is used to determine if a record is active (checked) or inactive (unchecked).  Used in connection with a feature specific (e.g. Covenant) setting is active.  Default is unchecked (inactive).</description>
    <inlineHelpText>This field indicates if Product State Config is used to determine if a record is active (checked) or inactive (unchecked).  Used in connection with a feature specific (e.g. Covenant) setting is active.  Default is unchecked (inactive).</inlineHelpText>
    <label>Activate</label>
    <type>Checkbox</type>
</CustomField>