force-app/main/default/objects/LLC_BI__Product_State_Config__c/fields/LLC_BI__External_Stage_Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Stage_Order__c</fullName>
    <description>This field is currently not used.</description>
    <label>External Stage Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>