force-app/main/default/objects/LLC_BI__Product_State_Config__c/fields/LLC_BI__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Type__c</fullName>
    <description>This field is automatically populated if creating the record from the product type. It is used to set which product type this product stage config should be used for.</description>
    <label>Product Type</label>
    <referenceTo>LLC_BI__Product_Type__c</referenceTo>
    <relationshipLabel>Product State Config</relationshipLabel>
    <relationshipName>Product_Type_Config</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>