force-app/main/default/objects/LLC_BI__Product_State_Config__c/fields/LLC_BI__Stage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stage__c</fullName>
    <description>This field is required. This field is manually populated. This field specifies the value that should be compared to the LLC_BI__Stage__c field on the LLC_BI__Loan__c object.</description>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>