force-app/main/default/objects/LLC_BI__Product_State_Config__c/fields/LLC_BI__Stage_and_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stage_and_Status__c</fullName>
    <description>This field is automatically populated via a formula using the &quot;Stage&quot; and &quot;Status&quot; fields. It is compared to the LLC_BI__Stage_And_Status__c field on LLC_BI__Loan__c records that have a matching product type to determine whether this record matches the current state of the loan. When it does match, depending on what fields are populated on the product state config record, the loan may be updated in the system or customer portal and/or reports may be updated.</description>
    <formula>LLC_BI__Stage__c &amp; &quot;|&quot; &amp; LLC_BI__Status__c</formula>
    <label>Stage and Status</label>
    <type>Text</type>
</CustomField>