force-app/main/default/objects/LLC_BI__Product_State_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Product_Type__c</columns>
    <columns>LLC_BI__Stage__c</columns>
    <columns>LLC_BI__Status__c</columns>
    <columns>LLC_BI__Is_Booked__c</columns>
    <columns>LLC_BI__Is_Closed__c</columns>
    <columns>LLC_BI__lookupKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>